JavaScript/rediscovering_javascript/literals/output/run-nope-extraction.output
{ name: theName } = sam;
                  ^

SyntaxError: Unexpected token =
